--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container__wrapper">
         <div class="row">
             <div class="col">
-                <input type="text" name="username" placeholder="Scrivi il tuo nome" value="Mirco">
-                <input type="text" name="distanza" placeholder="numero di chilometi" value="58">
-                <input type="text" name="eta" placeholder="Quanti anni hai?" value="38">
-                <input type="submit">
+                <input type="text" id="username" name="username" placeholder="Scrivi il tuo nome" value="">
+                <input type="text" id="distanza" name="distanza" placeholder="numero di chilometi" value="">
+                <input type="text" id="eta" name="eta" placeholder="Quanti anni hai?" value="">
+                <input id="invia" type="submit">
             </div>
         </div>
     </div>
