--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,30 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>js-biglietto-treno-form</title>
 </head>
+
 <body>
     <div class="container__wrapper">
-        <div class="row">
-            <div class="col">
-                <input type="text" id="username" name="username" placeholder="Scrivi il tuo nome" value="">
-                <input type="text" id="distanza" name="distanza" placeholder="numero di chilometi" value="">
-                <input type="text" id="eta" name="eta" placeholder="Quanti anni hai?" value="">
-                <input id="invia" type="submit">
+        <h2>Calcola il prezzo del tuo biglietto</h2>
+        <div class="col">
+            <input type="text" id="username" name="username" placeholder="Scrivi il tuo nome" value="">
+            <input type="text" id="distanza" name="distanza" placeholder="numero di chilometi" value="">
+            <input type="text" id="eta" name="eta" placeholder="Quanti anni hai?" value="">
+            <input id="invia" type="submit">
+            <button><a href="#">annulla</a></button>
+        </div>
+        <h2>il tuo biglietto</h2>
+        <div class="col__data">
+            <h3>dettaglio passegeri</h3>
+            <div class="data__content">
+
+            </div>
+            <div class="data__price">
+
             </div>
         </div>
+
     </div>
     <script src="./js/app.js"></script>
 </body>
+
 </html>
