text-style edit

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <button><a href="#">annulla</a></button>
         </div>
         <h2>il tuo biglietto</h2>
-        <div class="col__data">
+        <div class="col__wrapper">
             <h3>dettaglio passegeri</h3>
-            <div class="data__content">
+            <div class="col__data">
+                <div class="data__content">
 
-            </div>
-            <div class="data__price">
+                </div>
+                <div class="data__price">
 
+                </div>
             </div>
         </div>
 
