--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <!-- wrapper -->
     <div class="container__wrapper">
         <h2>Calcola il prezzo del tuo biglietto</h2>
+        <!-- colonna di input -->
         <div class="col">
             <input type="text" id="username" name="username" placeholder="Scrivi il tuo nome" value="">
             <input type="text" id="distanza" name="distanza" placeholder="numero di chilometi" value="">
@@ -20,14 +22,14 @@
             <button><a href="#">annulla</a></button>
         </div>
         <h2>il tuo biglietto</h2>
+        <!-- colonna di output -->
         <div class="col__wrapper">
-            <h3>dettaglio passegeri</h3>
             <div class="col__data">
                 <div class="data__content">
-
+                    <h3>prezzo del biglietto</h3>
                 </div>
                 <div class="data__price">
-
+                    <span id="prezzo"></span>
                 </div>
             </div>
         </div>
